tests/unit/language/errors/copy_param_array_rejected.arche
// `copy` currently duplicates only a local `char[N]` buffer (statically sized). Copying a
// forwarded array parameter (whose backing size isn't statically known here) is a clear compile
// error rather than a silent no-copy. See docs/ownership_design_decisions.md.
// RUN: %arche build -o %t %s > %t.out 2>&1 ; grep -qi "not yet supported" %t.out
func consume(own b: char[]) -> char[] {
  b[0] = 'X';
  return b;
}
func relay(b: char[]) -> int {
  other := consume(copy b);
  return 0;
}

proc main() {
  buf: char[8];
  relay(buf);
}
